# bitstarks

./: .gitignore  next.config.js  package-lock.json  package.json  render.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/Lock-Unlock/: page.tsx  styles.css
app/Transactions/: page.tsx  styles.css
app/bridge/: page.tsx  styles.css
app/components/: FloatingDots.tsx  Header.tsx  Hero.tsx  Testimonials.tsx  TransactionContext.tsx  WalletModal.tsx
app/floating/: floating-dots.css
app/lib/wasm/: bitcoin_starknet_bridge.js  bitcoin_starknet_bridge_bg.wasm
app/swap/: page.tsx  styles.css
app/utils/: bitcoinBridge.ts  starknet.ts
backend/: .env  package.json
backend/src/: index.ts
backend/src/bitcoin/: sender.ts  watcher.ts
backend/src/coordinator/: liquidityCoordinator.ts
backend/src/starknet/: listener.ts  minter.ts
contracts/: Scarb.toml
contracts/src/contracts/: Bridge.cairo
frontend/: .env.example  .gitignore  next.config.js  tsconfig.json
frontend/app/: globals.css  globals.ts  page.tsx  wasm-types.d.ts
frontend/app/Lock-Unlock/: page.tsx
frontend/app/Transactions/: page.tsx  styles.css
frontend/app/bridge/: page.tsx  styles.css
frontend/app/components/: BridgeInterface.tsx  FAQ.tsx  Features.tsx  FloatingDots.tsx  Footer.tsx  HowItWorks.tsx  Notification.tsx  Stats.tsx  TransactionContext.tsx  (+1 more)
frontend/config/: wagmi.ts
public/wasm/: bitcoin_starknet_bridge.js  bitcoin_starknet_bridge_bg.wasm
rust-bitcoin-bridge/: Cargo.toml
rust-bitcoin-bridge/src/: lib.rs
src/: lib.cairo
src/contracts/: Bridge.cairo
(+8 files in other folders)
