[package]
name = "bitcoin-starknet-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3"
web-sys = "0.3"